--- a/html/login.html
+++ b/html/login.html
@@ -17,6 +17,7 @@
                 <span>LOGIN</span>
             </div>
             <form action="form">
+                <div id="validate" class="alert alert-danger"></div>
                 <div class="lg">
                     <input type="text" class="name1" placeholder="Entername" required >
                     <i class="fa-solid fa-person"></i>
