--- a/html/user.html
+++ b/html/user.html
@@ -12,11 +12,11 @@
 </head>
 <body id="body">
     <section id="users">
-        <div class="container">
+        <!-- <div class="container">
             <h2>USERNAME:</h2>
             <h2>EMAIL:</h2>
             <h2>PASSWORD:</h2>
-        </div>
+        </div> -->
     </section>
                     
                    
